--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,4 @@
-# Stage 1: Build the application
-FROM node:20.0.0-alpine AS build
+FROM node:20.15.0 AS build
 
 WORKDIR /app
 
@@ -9,8 +8,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Run the application
-FROM node:20.0.0-alpine
+FROM node:20.15.0
 
 WORKDIR /app
 
